--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -14,15 +14,23 @@
           <div class="icon-wrapper">
             <i class="fa-solid fa-location-dot"></i>
           </div>
-          <p class="ps-2 mb-0">Ben Arous zone industriellle 2013 Tunis</p>
+          <p class="color-primary ps-2 mb-0">Ben Arous zone industriellle 2013 Tunis</p>
         </div>
         <div class="d-flex align-items-center p-2">
           <div class="icon-wrapper">
             <i class="fa-solid fa-phone"></i>
           </div>
           <div class="ps-2">
-            <a class="d-block text-decoration-none" href="phone:71380075">Tél : 79 396 212 / 71380075</a>
-            <a class="d-block text-decoration-none" href="phone:71380817">Fax : 79 396 214 / 71380817</a>
+            <div class="color-primary">
+              Tél :
+              <a class="text-decoration-none" href="phone:79 396 212">79 396 212 /</a>
+              <a class="text-decoration-none" href="phone:71 380 075">71 380 075</a>
+            </div>
+            <div class="color-primary">
+              Fax :
+              <a class="text-decoration-none" href="phone:79 396 214">79 396 214 /</a>
+              <a class="text-decoration-none" href="phone:71 380 817">71 380 817</a>
+            </div>
           </div>
         </div>
       </div>
@@ -36,7 +44,7 @@
           <h1 class="text-uppercase">Sinpar</h1>
         </div>
         <div class="col-12 col-md-6 img-container">
-          <img src="<%=require("../assets/images/camion.png")%>" class="w-100" alt="lorem5">
+          <img src="<%=require("../assets/images/camion.png")%>" class="w-100" alt="Sinpar">
         </div>
       </div>
     </section>
