contact form submit

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -64,13 +64,13 @@
             <h2 class="text-uppercase mb-4">Contacter nous</h2>
             <form class="w-100">
               <div class="mb-3">
-                <input type="text" class="form-control" id="contact-name" placeholder="Nom et Prénom" name="mail[name]">
+                <input type="text" class="form-control" id="contact-name" placeholder="Nom et Prénom" required name="mail[name]">
               </div>
               <div class="mb-3">
-                <input type="email" class="form-control" id="contact-email" placeholder="Email" name="mail[email]">
+                <input type="email" class="form-control" id="contact-email" placeholder="Email" required name="mail[email]">
               </div>
               <div class="mb-3">
-                <textarea name="mail[message]" class="form-control" placeholder="Votre message" id="contact-message"
+                <textarea name="mail[message]" class="form-control" placeholder="Votre message" required id="contact-message"
                   cols="30" rows="10"></textarea>
               </div>
               <div class="mb-3">
