--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,6 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" href="<%= htmlWebpackPlugin.options.files.favicon %>">
+  <title>
+      <%= htmlWebpackPlugin.options.title %>
+  </title>
 </head>
 
 <body>
